# topo-tpm

./: CMakeLists.txt  README.md  THIRD-PARTY.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: TpmCompilerFlags.cmake  topo-tpmConfig.cmake.in
include/tpm/: Cache.h  Commands.h  DualContractVerifier.h  GitRegistry.h  Lock.h  Manifest.h  MigrationEngine.h  MigrationRule.h  PackageHash.h  SemVer.h  Sha256.h
lib/: Cache.cpp  Commands.cpp  DualContractVerifier.cpp  GitRegistry.cpp  Lock.cpp  Manifest.cpp  MigrationEngine.cpp  MigrationRule.cpp  PackageHash.cpp  SemVer.cpp  Sha256.cpp
test/: CMakeLists.txt
test/cli/: TpmCliIntegrationTest.cpp
test/cli/fixtures/pkg-local/: tpm.toml
test/cli/fixtures/pkg-local/declarations/: example.topo
test/fixtures/: 0.2.0-to-0.3.0.migration.toml  0.3.0-to-1.0.0.migration.toml  index.toml  malicious-rules-index.toml  malicious-version-manifest.toml
test/unit/: AdapterManifestTest.cpp  CommandsTest.cpp  DualContractVerifierTest.cpp  FileLockConcurrencyTest.cpp  InstallIntegrityTest.cpp  MigrateOrchestrationTest.cpp  MigrationEngineTest.cpp  MigrationRuleTest.cpp  PathTraversalRegressionTest.cpp  SemVerTest.cpp
tools/tpm/: main.cpp
